[workspace]
resolver = "3"
members = ["clvm_to_arm_chialisp", "clvm_to_arm_emulate","clvm_to_arm_generate","clvm_to_arm_emulate", "clvm_to_arm_serve", "clvm_to_arm_rue", "clvm_to_arm_build_rue", "clvm_to_arm_test", "clvm_to_arm_build_chialisp"]

[workspace.package]
readme = "README.md"
keywords = ["chia", "blockchain", "crypto"]
categories = ["cryptography::cryptocurrencies", "development-tools"]
