[package]
name = "clvm_to_arm_build_chialisp"
version = "0.1.0"
edition = "2024"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "Command line tool to generate gdb debuggable code from chialisp"
license = "Apache-2.0"
homepage = "https://github.com/prozacchiwawa/clvm_arm_jit"
repository = "https://github.com/prozacchiwawa/clvm_arm_jit"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
clvm_to_arm_chialisp = { path = "../clvm_to_arm_chialisp" }
clap = { version = "4.6.1", features = [ "derive" ] }
clvmr = "0.16.4"

[[bin]]
name = "clvm_to_arm_build_chialisp"
path = "src/main.rs"
