[package]
name = "clvm_to_arm_build_rue"
version = "0.1.0"
edition = "2024"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "Command line tool to generate gdb debuggable code from rue source"
license = "Apache-2.0"
homepage = "https://github.com/prozacchiwawa/clvm_arm_jit"
repository = "https://github.com/prozacchiwawa/clvm_arm_jit"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
clvm_to_arm_rue = { path = "../clvm_to_arm_rue" }
clap = { version = "4.6.1", features = [ "derive" ] }

[[bin]]
name = "clvm_to_arm_build_rue"
path = "src/main.rs"
