[package]
name = "clvm_to_arm_generate"
version = "0.1.0"
edition = "2024"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "Generate arm code equivalent to given clvm code to inspect and debug with gdb"
license = "Apache-2.0"
homepage = "https://github.com/prozacchiwawa/clvm_arm_jit"
repository = "https://github.com/prozacchiwawa/clvm_arm_jit"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4.4", features = ["serde"] }
sha2 = "0.10.9"
faerie = "0.16.0"
elf_rs = "0.3.1"
gimli = "0.28.0"
target-lexicon = "0.11.1"
clvmr = "0.16.4"
armv4t_emu = "0.1.0"
