[package]
name = "clvm_to_arm_rue"
version = "0.1.0"
edition = "2024"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/prozacchiwawa/clvm_arm_jit"
repository = "https://github.com/prozacchiwawa/clvm_arm_jit"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
chialisp = "0.4.5"
clvm_to_arm_generate = { path = "../clvm_to_arm_generate" }
clvm_to_arm_emulate = { path = "../clvm_to_arm_emulate" }
clvmr = "0.16.4"
id-arena = "2.3.0"
indexmap = "2.14.0"
rue-compiler = "0.8.4"
rue-hir = "0.8.4"
rue-diagnostic = "0.8.4"
rue-lir = "0.8.4"
rue-options = "0.8.4"
hex = "0.4.3"
rowan = "0.16.1"

[dev-dependencies]
clvm_to_arm_test = { path = "../clvm_to_arm_test" }
