[package]
name = "clvm_to_arm_serve"
version = "0.1.0"
edition = "2024"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "Provide a simple way of starting the gdb stub on the command line running a program output from clvm_to_arm_generate"
license = "Apache-2.0"
homepage = "https://github.com/prozacchiwawa/clvm_arm_jit"
repository = "https://github.com/prozacchiwawa/clvm_arm_jit"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4.4", features = ["serde"] }
target-lexicon = "0.11.1"
clvm_to_arm_generate = { path = "../clvm_to_arm_generate" }
clvm_to_arm_emulate = { path = "../clvm_to_arm_emulate" }
clap = { version = "4.6.1", features = [ "derive" ] }
serde = "1.0.228"
serde_json = "1.0.150"
chialisp = "0.4.5"
clvmr = "0.16.4"

[[bin]]
name = "clvm_to_arm_serve"
path = "src/main.rs"
